[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parse-wkb"
version = "0.1.0"
description = 'Pure python library to parse WKB (Well Known Binary) GIS geospatial geometry format'
readme = "readme.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "thehappycheese"},
]
dependencies = []

[project.urls]
Documentation = "https://github.com/thehappycheese/parse-wkb#readme"
Issues = "https://github.com/thehappycheese/parse-wkb/issues"
Source = "https://github.com/thehappycheese/parse-wkb"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/parse_wkb tests}"

[tool.coverage.run]
source_pkgs = ["parse_wkb", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
parse_wkb = ["src/parse_wkb"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
